--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ python:
 
 install: pip install flake8
 
-before_script: flake8 .
+before_script:
+  - flake8 .
+  - cd cpp
+  - make
 
-script: py.test
+script: 
+  - py.test
