--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install: pip install flake8
 
 before_script:
   - flake8 .
-  - make -C cpp
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then (make -C cpp); fi
 
 script: 
   - py.test
