--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ install:
 
 before_script:
   - flake8 .
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then (make -C cpp); fi
 
 script: 
