--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,17 @@ python:
   - 3.3
   - 3.4
   - 3.5
-
+  
+before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
+  
 install: 
   - pip install flake8
   - sudo apt-get install g++-4.8
 
 before_script:
   - flake8 .
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then (make -C cpp); fi
 
 script: 
