--- a/.travis.yml
+++ b/.travis.yml
@@ -9,16 +9,15 @@ python:
   - 3.5
   
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; sudo apt-get update; fi
   
 install: 
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo apt-get install g++-4.8; fi
   - pip install flake8
-  - sudo apt-get install g++-4.8
 
 before_script:
-  - flake8 .
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then (make -C cpp); fi
+  - flake8 .
 
 script: 
   - py.test
