--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; sudo apt-get update; fi
   
 install: 
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo apt-get install g++-4.8; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo apt-get install g++-4.8 valgrind; fi
   - pip install flake8
 
 before_script:
@@ -20,4 +20,5 @@ before_script:
   - flake8 .
 
 script: 
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; valgrind --error-exitcode=1 --leak-check=full ./cpp/examples/tic_tac_toe.o; fi
   - py.test
