--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
   - pip install flake8
 
 before_script:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then (make -C cpp); fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then make -C cpp; fi
   - flake8 .
 
 script: 
