Enable C++ code optimizations with -O2

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++-4.8 -std=c++11 tests/test_tic_tac_toe.cpp -o tests/test_tic_tac_toe.o
+	g++-4.8 -std=c++11 -O2 tests/test_tic_tac_toe.cpp -o tests/test_tic_tac_toe.o
 	
 clean:
 	rm -f tests/*.o
