--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ before_script:
   - flake8 .
 
 script: 
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/*.o; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/test_tic_tac_toe.o; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/isola.o; fi
   - py.test
