--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -9,5 +9,8 @@ tic_tac_toe:
 isola:
 	$(CC) $(FLAGS) tests/test_isola.cpp -o tests/test_isola.o
 
+test: all
+	tests/test_tic_tac_toe.o tests/test_isola.o
+
 clean:
 	rm -f tests/*.o
