--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; sudo apt-get update; fi
   
 install: 
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo apt-get install g++-4.8 valgrind; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo apt-get install g++-4.8 valgrind libboost-all-dev; fi
   - pip install flake8
 
 before_script:
