--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,15 @@
-language: python
+language: cpp
 
-python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
-  - 3.4
-  - 3.5
-  
 before_install:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test; sudo apt-get update; fi
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
   
 install: 
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then sudo apt-get install g++-4.8 valgrind libboost-all-dev; fi
-  - pip install flake8
+  - sudo apt-get install g++-4.8 valgrind libboost-all-dev
 
 before_script:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then make -C cpp; fi
-  - flake8 .
+  - make -C cpp
 
 script: 
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/test_tic_tac_toe.o; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/test_isola.o; fi
-  - py.test
+  - valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/test_tic_tac_toe.o
+  - valgrind --error-exitcode=1 --leak-check=full ./cpp/tests/test_isola.o
