--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -6,7 +6,11 @@ all: tests/test_tic_tac_toe.o tests/test_isola.o
 test: all
 	tests/test_tic_tac_toe.o
 	tests/test_isola.o
-
+	
+valgrind: all
+	valgrind --error-exitcode=1 --leak-check=full --show-leak-kinds=definite,indirect tests/test_tic_tac_toe.o
+	valgrind --error-exitcode=1 --leak-check=full --show-leak-kinds=definite,indirect tests/test_isola.o
+	
 play_isola: tests/play_isola.o
 	tests/play_isola.o
 
