--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - sudo apt-get update
   
 install:
-  - sudo apt-get install g++-4.8 valgrind=1:3.10.1-1ubuntu3 libboost-all-dev
+  - sudo apt-get install g++-4.8 valgrind libboost-all-dev
 
 script:
   - make valgrind -C cpp
