--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ language: cpp
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
+  - pip install --upgrade pip
   
 install:
   - sudo apt-get install g++-4.8 valgrind libboost-all-dev
-  - pip install cpp-coveralls
+  - sudo pip install cpp-coveralls
 
 script:
   - make valgrind -C cpp
