Ability to play against any executable
To play with standalone bots, Executable algorithm was added.

It gets move by running a given command, for example ./wiman.o
(launching a process of external bot which waits for the input), 
passing state input to the bot and reading its move.

What's nice about it is that the external bot can be written in any
language. It only has to read state in external_format and output
its move (in a format understood by Move's read function).

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -21,7 +21,13 @@ test_isola: tests/test_isola.o
 
 test_connect_four: tests/test_connect_four.o
 	tests/test_connect_four.o
-	
+
+test_executable: tests/test_executable.o tests/marten.o
+	tests/test_executable.o
+
+marten: tests/marten.o
+	tests/marten.o
+
 play_isola: tests/play_isola.o
 	tests/play_isola.o
 
@@ -30,9 +36,15 @@ tests/test_tic_tac_toe.o: gtsa.hpp examples/tic_tac_toe.cpp tests/test_tic_tac_t
 
 tests/test_isola.o: gtsa.hpp examples/isola.cpp tests/test_isola.cpp
 	$(CC) $(FLAGS) tests/test_isola.cpp -o tests/test_isola.o
-	
+
 tests/test_connect_four.o: gtsa.hpp examples/connect_four.cpp tests/test_connect_four.cpp
 	$(CC) $(FLAGS) tests/test_connect_four.cpp -o tests/test_connect_four.o
+
+tests/test_executable.o: gtsa.hpp examples/isola.cpp tests/test_executable.cpp
+	$(CC) $(FLAGS) tests/test_executable.cpp -o tests/test_executable.o
+
+tests/marten.o: tests/marten.cpp
+	$(CC) $(FLAGS) tests/marten.cpp -o tests/marten.o
 
 tests/play_isola.o: gtsa.hpp examples/isola.cpp tests/play_isola.cpp
 	$(CC) $(FLAGS) tests/play_isola.cpp -o tests/play_isola.o
