--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: cpp
 
 before_install:
-  - add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - apt-get update
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update
   - pip install --upgrade pip
   
 install:
-  - apt-get install g++ valgrind libboost-all-dev
+  - sudo apt-get install g++ valgrind libboost-all-dev
   - pip install cpp-coveralls
 
 script:
