Add the game of Go

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,17 +1,19 @@
 CC=g++
-FLAGS=-std=c++11 -O2 -fprofile-arcs -ftest-coverage -Wreturn-type -D BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS
+FLAGS=-g -std=c++11 -O2 -fprofile-arcs -ftest-coverage -Wreturn-type -D BOOST_MATH_NO_LONG_DOUBLE_MATH_FUNCTIONS
 
-all: tests/test_tic_tac_toe.o tests/test_isola.o tests/test_connect_four.o tests/play_isola.o
+all: tests/test_tic_tac_toe.o tests/test_isola.o tests/test_connect_four.o tests.test_go.o tests/play_isola.o
 
 test: tests/test_tic_tac_toe.o tests/test_isola.o tests/test_connect_four.o
 	tests/test_tic_tac_toe.o
 	tests/test_isola.o
 	tests/test_connect_four.o
+	tests/test_go.o
 
-valgrind: tests/test_tic_tac_toe.o tests/test_isola.o tests/test_connect_four.o
+valgrind: tests/test_tic_tac_toe.o tests/test_go.o tests/test_isola.o tests/test_connect_four.o
 	valgrind --error-exitcode=1 --leak-check=full tests/test_tic_tac_toe.o
 	valgrind --error-exitcode=1 --leak-check=full tests/test_isola.o
 	valgrind --error-exitcode=1 --leak-check=full tests/test_connect_four.o
+	valgrind --error-exitcode=1 --leak-check=full tests/test_go.o
 
 test_tic_tac_toe: tests/test_tic_tac_toe.o
 	tests/test_tic_tac_toe.o
@@ -21,6 +23,9 @@ test_isola: tests/test_isola.o
 
 test_connect_four: tests/test_connect_four.o
 	tests/test_connect_four.o
+
+test_go: tests/test_go.o
+	tests/test_go.o
 
 test_executable: tests/test_executable.o tests/marten.o
 	tests/test_executable.o
@@ -39,6 +44,9 @@ tests/test_isola.o: gtsa.hpp examples/isola.cpp tests/test_isola.cpp
 
 tests/test_connect_four.o: gtsa.hpp examples/connect_four.cpp tests/test_connect_four.cpp
 	$(CC) $(FLAGS) tests/test_connect_four.cpp -o tests/test_connect_four.o
+
+tests/test_go.o: gtsa.hpp examples/go.cpp tests/test_go.cpp
+	$(CC) $(FLAGS) tests/test_go.cpp -o tests/test_go.o
 
 tests/test_executable.o: gtsa.hpp examples/isola.cpp tests/test_executable.cpp
 	$(CC) $(FLAGS) tests/test_executable.cpp -o tests/test_executable.o
